--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>e洁家政服务</title>
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="http://at.alicdn.com/t/font_1391309_z8hn6obsy4.css">
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script type="text/javascript" src="./js/index.js"></script>
 </head>
@@ -14,17 +15,36 @@
 		<div class="left">
 			<div class="title">e洁家政服务平台</div>
 			<ul class="left_nav">
-				<li class="current"><a href="">顾客管理</a></li>
-				<li><a href="">员工管理</a></li>
-				<li><a href="">分类管理</a></li>
-				<li><a href="">产品管理</a></li>
-				<li><a href="">订单管理</a></li>
-				<li><a href="">评论管理</a></li>
+				<li class="current">
+					<i class="iconfont icon-yonghuguanli"></i>
+					<a href="javascript:void(0)" class="btn_customer">顾客管理</a>
+				</li>
+				<li>
+					<i class="iconfont icon-yonghuguanli1"></i>
+					<a href="javascript:void(0)" class="btn_waiter">员工管理</a>
+				</li>
+				<li>
+					<i class="iconfont icon-caidanguanli"></i>
+					<a href="javascript:void(0)" class="btn_category">分类管理</a>
+				</li>
+				<li>
+					<i class="iconfont icon-chanpinjieshao"></i>
+					<a href="javascript:void(0)" class="btn_product">产品管理</a>
+				</li>
+				<li>
+					<i class="iconfont icon-dingdanhuorizhi"></i>
+					<a href="javascript:void(0)" class="btn_order">订单管理</a>
+				</li>
+				<li>
+					<i class="iconfont icon-liuyanguanli"></i>
+					<a href="javascript:void(0)" class="btn_comment">评论管理</a>
+				</li>
 			</ul>
 		</div>
 		<div class="right">
 			<div class="content">
 				<div class="mb_nav">
+					<span></span>
 					主页 / 顾客管理 / 地址管理
 				</div>
 				<div id="wrapper">
