第五次提交优化列表点击样式

--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
 		<div class="left">
 			<div class="title">e洁家政服务平台</div>
 			<ul class="left_nav">
-				<li class="current">
+				<li url="./pages/customer.html">
 					<i class="iconfont icon-yonghuguanli"></i>
-					<a href="javascript:void(0)" class="btn_customer">顾客管理</a>
+					<a href="javascript:void(0)">顾客管理</a>
 				</li>
-				<li>
+				<li url="./pages/waiter.html">
 					<i class="iconfont icon-yonghuguanli1"></i>
-					<a href="javascript:void(0)" class="btn_waiter">员工管理</a>
+					<a href="javascript:void(0)">员工管理</a>
 				</li>
-				<li>
+				<li url="./pages/category.html">
 					<i class="iconfont icon-caidanguanli"></i>
-					<a href="javascript:void(0)" class="btn_category">分类管理</a>
+					<a href="javascript:void(0)">分类管理</a>
 				</li>
-				<li>
+				<li url="./pages/product.html">
 					<i class="iconfont icon-chanpinjieshao"></i>
-					<a href="javascript:void(0)" class="btn_product">产品管理</a>
+					<a href="javascript:void(0)">产品管理</a>
 				</li>
-				<li>
+				<li url="./pages/order.html">
 					<i class="iconfont icon-dingdanhuorizhi"></i>
-					<a href="javascript:void(0)" class="btn_order">订单管理</a>
+					<a href="javascript:void(0)">订单管理</a>
 				</li>
-				<li>
+				<li url="./pages/comment.html">
 					<i class="iconfont icon-liuyanguanli"></i>
-					<a href="javascript:void(0)" class="btn_comment">评论管理</a>
+					<a href="javascript:void(0)">评论管理</a>
 				</li>
 			</ul>
 		</div>
