--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<!-- 左侧导航 -->
 		<div class="left">
-			<div class="title">e洁家政服务平台</div>
+			<div class="title" url="./pages/homepage.html">e洁家政服务平台</div>
 			<ul class="left_nav">
 				<li url="./pages/customer.html">
 					<i class="iconfont icon-yonghuguanli"></i>
