--- a/pages/customer.html
+++ b/pages/customer.html
@@ -4,7 +4,7 @@
 	}
 	.btn {
 		display: inline-block;
-		padding: .3em 1.2em;
+		padding: 0.5em 1.5em;
 		border-radius: 3px;
 		border:1px solid #ccc;
 		color: #333;
@@ -29,8 +29,66 @@
 	.none {
 		display: none;
 	}
+	.hidden{
+		display: none;
+	}
+	.model{
+            position:fixed;
+            left:50%;
+            top:50%;
+            width:500px;
+            height:400px;
+            margin-left:-200px;
+            margin-top:-250px;
+            z-index:20;
+            background-color:white;
+             opacity:0.9;
+
+        }
+        .shade{
+            position:fixed;
+            left:0;
+            right:0;
+            top:0;
+            bottom:0;
+            opacity:0.6;
+            background-color:black;
+            z-index:5;
+        }
+        form{
+        	background-color: #fff;
+        	border-radius: 5px;
+        	padding: 50px  100px;
+        }
+         form  td{
+             height:50px;
+             font-size: 18px;
+             margin:20px;
+            padding-left: 20px;
+
+         }
+         form  input{
+         	height: 30px;
+         	border:1px solid #ccc;
+         	border-radius:3px;
+         }
+         form h1{
+         margin-left: 40px;
+         color: #333;
+         }
+         form button{
+             padding: 10px 20px;
+             background-color: #fff;
+             border:1px solid #ccc;
+             border-radius:3px;
+         }
+         form button:hover{
+         	background-color: #ededed;
+         }
+     
 </style>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="./js/me.js"></script>
 <script>
 var baseURL = "http://134.175.154.93:6677";
 // 初始化数据
@@ -47,12 +105,58 @@ function initData(){
 				<td>
 					<a class="btn_del" href="javascript:void(0)">删除</a>
 					<a class="btn_upd" href="javascript:void(0)">修改</a>
+					<a class="btn_all" href="javascript:void(0)">详情</a>
 				</td>
 			</tr>`);
 			$("#customer_tbl > tbody").append(newTr);
 		});
 	});
 }
+$(function(){
+	//初始化加载
+	initData();
+	//为添加按钮绑定事件
+	$('div[id="btn_add"').on("click",function(){
+		$('.hidden').removeClass("hidden")
+	})
+
+})
+
+$(function(){
+	//初始化加载
+	initData();
+	//为取消按钮绑定事件
+	$('button[value="取消"]').on("click",function(){
+		$('.model,.shade').addClass("hidden")
+	})
+})
+$(function(){
+	//为保存按钮添加事件
+	$('button[value="保存"]').on("click",function(){
+			
+			var realname = document.querySelector("input[name=realname]").value;
+			var telephone = document.querySelector("input[name=telephone]").value;
+			var id = document.querySelector("input[name=id]").value;
+			var url = baseURL+"/customer/saveCustomerOrUpdateCustomer";
+			var data;
+			if(id){
+				data = "id="+id+"&realname="+realname+"&telephone="+telephone
+			} else {
+				data = "realname="+realname+"&telephone="+telephone
+			}
+			// ajax
+			$.post(url,data,function(result){
+				alert(result.message);
+				$('.model,.shade').addClass("hidden")
+				initData();
+			});
+			event.preventDefault();
+			
+			
+            
+	})
+})
+
 
 $(function(){
 	// 初始化加载
@@ -79,12 +183,15 @@ $(function(){
 		<div class="btn" id="btn_add">添加</div>
 		<div class="btn">批量导入</div>
 		<div class="btn">批量删除</div>
-	</div>
-	<div class="forms">
+	</div>	
+
+
+	<div class="model hidden" >
 		<form action="javascript:void(0)">
 			<input type="hidden" name="id">
 			<table>
 				<tbody>
+				<h1>添加客户信息</h1>
 					<tr>
 						<td>姓名</td>
 						<td><input type="text" name="realname"></td>
@@ -96,12 +203,15 @@ $(function(){
 						<td></td>
 					</tr>
 					<tr>
-						<td><input type="submit" value="保存"></td>
+						<td><button value="保存">保存</button></td>
+						<td><button value="取消">取消</button></td>
 					</tr>
+
 				</tbody>
 			</table>
 		</form>
 	</div>
+	<div class="shade hidden"></div>
 	<table class="table" id="customer_tbl">
 		<thead>
 			<tr>
