wsy提交删除ej后的新文件，以及提交首页页面

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -1,3 +1,63 @@
-<div class="waiter">
-	首页
-</div>
+<style type="text/css">
+	*{
+		margin: 0;
+		padding: 0;
+	}
+	li{
+		list-style: none;
+	}
+	.content .content_top{
+		text-align: center;
+		line-height: 3em;
+	}
+	.content .content_center{
+		box-sizing: border-box;
+		padding: 30px 20px;
+		width: 400px;
+		height: 500px;
+		margin: 0 auto;
+		font-size: 18px;
+		text-align: center;
+		line-height: 3em;
+	}
+	.content .content_center .cc_left{
+		float: left;
+	}
+	.content .content_center .cc_right{
+		float: right;
+	}
+	.footer{
+		top: 0;
+		text-align: center;
+	}
+
+</style>
+
+
+<!-- html部分 -->
+<body>
+	<div class="content">
+		<div class="content_top">
+			<h2>欢迎光临，E洁家政</h2>
+		</div>
+		<div class="content_center">
+			<div class="cc_left">
+				<ul>
+					<li>销量</li>
+					<li>***</li>
+				</ul>
+			</div>
+			<div class="cc_right">
+				<ul>
+					<li>点击量</li>
+					<li>***</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</body>
+<footer class="footer">
+	<p>group12-E洁家政后台管理系统</p>
+</footer>
+
+
