第二次提交优化的首页页面

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -6,11 +6,11 @@
 	li{
 		list-style: none;
 	}
-	.content .content_top{
+	 .content_top{
 		text-align: center;
 		line-height: 3em;
 	}
-	.content .content_center{
+	 .content_center{
 		box-sizing: border-box;
 		padding: 30px 20px;
 		width: 400px;
@@ -20,10 +20,10 @@
 		text-align: center;
 		line-height: 3em;
 	}
-	.content .content_center .cc_left{
+	 .content_center .cc_left{
 		float: left;
 	}
-	.content .content_center .cc_right{
+	 .content_center .cc_right{
 		float: right;
 	}
 	.footer{
@@ -35,27 +35,23 @@
 
 
 <!-- html部分 -->
-<body>
-	<div class="content">
-		<div class="content_top">
-			<h2>欢迎光临，E洁家政</h2>
+	<div class="content_top">
+		<h2>欢迎光临，E洁家政</h2>
+	</div>
+	<div class="content_center">
+		<div class="cc_left">
+			<ul>
+				<li>销量</li>
+				<li>***</li>
+			</ul>
 		</div>
-		<div class="content_center">
-			<div class="cc_left">
-				<ul>
-					<li>销量</li>
-					<li>***</li>
-				</ul>
-			</div>
-			<div class="cc_right">
-				<ul>
-					<li>点击量</li>
-					<li>***</li>
-				</ul>
-			</div>
+		<div class="cc_right">
+			<ul>
+				<li>点击量</li>
+				<li>***</li>
+			</ul>
 		</div>
 	</div>
-</body>
 <footer class="footer">
 	<p>group12-E洁家政后台管理系统</p>
 </footer>
